--- a/Resources/Private/Backend/Layouts/Templates.html
+++ b/Resources/Private/Backend/Layouts/Templates.html
@@ -2,8 +2,7 @@
 
 <v:variable.set name="cssFile" value="{f:uri.resource(path:'Css/templates.css')}" />
 
-<f:be.container includeCssFiles="{admincss: cssFile}" loadExtJsTheme="false" extJsAdapter="jQuery" loadJQuery="true" loadPrototype="false">
-	<script src="{f:uri.resource(path:'JavaScript/templates.js')}" type="text/javascript"></script>
+<f:be.container includeCssFiles="{admincss: cssFile}" loadExtJs="false" loadExtJsTheme="false" enableJumpToUrl="false" enableClickMenu="false" extJsAdapter="jQuery" loadJQuery="true" loadPrototype="false">
 	<div class="typo3-fullDoc tx-moox-feusers-admin">
 		<div id="typo3-docheader">			
 			<div class="typo3-docheader-functions">				
@@ -12,6 +11,7 @@
 					<f:be.menus.actionMenu>
 						<f:be.menus.actionMenuItem label="Vorlagen" controller="Template" action="index" />
 						<f:be.menus.actionMenuItem label="Frontend-Benutzer" controller="Administration" action="index" />
+						<f:be.menus.actionMenuItem label="Import" controller="Import" action="index" />						
 					</f:be.menus.actionMenu>
 				</div>
 				<div class="right">
